# pyCRUMBS

./: CRUMBS.py  CRUMBSMessage.py  README.md  pyproject.toml  setup.py  setup_pycrumbs.sh  verify_setup.sh
docs/: .indexignore  api-reference.md  auto-setup-testing.md  auto_setup_testing.md  development.md  examples.md  getting-started.md  index.md  manual-setup-testing.md  manual_setup_testing.md  protocol.md  setup_notes.md
examples/: leader_example.py
pyCRUMBS/: CRUMBS.py
scripts/: compile_crc8_c99.py  generate_crc8_c99.py
src/pyCRUMBS/: CRUMBS.py  CRUMBSMessage.py  __init__.py  crc8_adapter.c  crc8_nibble.c  crc8_nibble.h
