# Build system configuration
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"


# Project metadata
[project]
name = "pyCRUMBS"
version = "0.1.0"
description = "Python implementation of the CRUMBS library for I2C communication on Raspberry Pi"
authors = [{ name = "Cameron K. Brooks", email = "cbrook49@uwo.ca" }]
license = { text = "GPLv3" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["smbus2"]

[project.urls]
Homepage = "https://github.com/FEASTorg/pyCRUMBS"

# Setuptools configuration
[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
"pyCRUMBS" = ["py.typed"]
